popover width fix on mobile

--- a/components/Table/Table.css
+++ b/components/Table/Table.css
@@ -96,8 +96,8 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        right: 5%;
-        left: 5%;
+        right: 8%;
+        left: 8%;
         background: #fff;
         box-shadow: 5px 5px 20px #bfbfbf;
         z-index: 5;
@@ -180,8 +180,8 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        right: 5%;
-        left: 5%;
+        right: 8%;
+        left: 8%;
         background: #fff;
         box-shadow: 5px 5px 20px #bfbfbf;
         z-index: 5;
